--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Source+Sans+Pro:wght@400;600;700&display=swap");
 html,
 body,
 #root,
@@ -23,3 +22,52 @@ body,
 ::-webkit-scrollbar-track:hover {
   background: #21295c;
 }
+
+.logo {
+  width: 65%;
+  margin: auto;
+  user-select: none;
+}
+.logo b {
+  color: #ffd166;
+  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 0 white, 0 0 0.5em white,
+    0 0 0.1em white;
+}
+/* .logo b span {
+  animation: blink linear infinite 2s;
+}
+.logo b span:nth-of-type(2) {
+  animation: blink linear infinite 3s;
+}
+@keyframes blink {
+  78% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  79% {
+    color: #333;
+  }
+  80% {
+    text-shadow: none;
+  }
+  81% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  82% {
+    color: #333;
+    text-shadow: none;
+  }
+  83% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  92% {
+    color: #333;
+    text-shadow: none;
+  }
+  92.5% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+} */
